--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "chai": "^4.1.2",
+    "codecov": "^3.0.0",
     "coveralls": "^3.0.0",
     "eslint": "^4.18.2",
     "foodoc": "0.0.8",
