--- a/package.json
+++ b/package.json
@@ -64,21 +64,23 @@
   },
   "homepage": "https://nothingismagick.github.io/node-flicks/",
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "chai": "^4.1.2",
-    "codecov": "^3.0.0",
+    "codecov": "^3.0.1",
     "coveralls": "^3.0.0",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "foodoc": "0.0.8",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.5",
     "jsdoc-oblivion": "0.0.9",
-    "mocha": "^5.0.1",
+    "mocha": "^5.1.1",
     "tui-jsdoc-template": "^1.2.2"
   },
   "directories": {
     "doc": "docs",
     "test": "test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "mathjs": "^4.1.2"
+  }
 }
